# r3c

./: .all-contributorsrc  .gitattributes  .gitignore  CMakeLists.txt  CONTACT.md  CONTRIBUTING.md  LICENSE  Philosophy.md  README.md  README_self_recompile.md  SECURITY.md  build_and_run.bat  make_hello_gcc.bat  ninja  out.asm  r3c.toml  r3c_auto_check.py  r3c_spec.md  run_r3c.ps1  run_r3c_bootstrap.bat  test_all.bat  test_all.ps1
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TRMPLATE.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature.yml  feature_request.yml  good_first_issue.yml  spec_proposal.yml
.github/workflows/: auto-build.yml  auto-discussion-doc.yml  auto-rebuild-on-close.yml  auto-stable-ecosystem.yml  auto-stable-tag.yml  auto_branch.yml  build.yml  cleanup.yml  contrib-auto.yml  contributors.yml  dashboard-update.yml  document_discussions.yml  funding.yml  geo-dashboard.yml  new-contributor.yml  project-auto.yml  r3c_build.yml  r3c_solo.yml  readme-sync.yml  release-auto.yml  release.yml  self-fix.yml  self-heal.yml  test-build.yml  traffic-badge.yml  traffic-monitor.yml  traffic-update.yml  traffic.yml  update-banner.yml  weekly-summary.yml
docs/: CONTRIBUTION_GUIDE.md  R3C_Architecture_Detail.md  R3C_Documentation.md  R3C_Linking_Pipeline.md  R3C_Source_Map.md  ROADMAP_NEXT.md  USER_GUIDE_AND_CONTRIBUTION.md  auto_document_discussions.md  community_feedback.md  contributor-conversion.md  roadmap_v6.md
examples/: main.cpp  main.r3
include/: pipeline.hpp  r3c.hpp  r3c_build_info.hpp.in  stdlib.hpp
include/nlohmann/: json.hpp
reports/: funding.json
rustlib/: fs.rs  io.rs  math.rs  r3c_bootstrap.rs  r3clib.rs  r3clib.rs.bak  r3std.rs  tests.rs  vendor.rs
scripts/: README-template-LTS.md  auto_docgen.py  fetch_discussions.py  gen_stub.sh  generate_stubs.ps1  generate_stubs.sh  merge_readme_template.py  r3c_full_setup.sh  traffic_gen.py  traffic_monitor_multi.py  update_banner.py
src/: _fallback_main.cpp  docgen.cpp  formatter.cpp  main.cpp  manifest.cpp  manifest.hpp  pipeline.cpp  pkgmgr.cpp  pkgmgr.hpp  r3c.cpp  r3c_stub.cpp  r3cpkg.cpp  r3cpkg.hpp  stdlib_r3c.cpp  stdlib_r3c.hpp  tester.cpp  transpiler.cpp  transpiler.hpp
traffic/data/: 2025-10-23.json
